--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,4 +28,46 @@
 		<filter-name>RedirectFilter</filter-name>
 		<url-pattern>/RedirectFilter</url-pattern>
 	</filter-mapping>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Free pages</web-resource-name>
+			<url-pattern>/login.jsp</url-pattern>
+		</web-resource-collection>
+		<web-resource-collection>
+			<web-resource-name>Protected area</web-resource-name>
+			<url-pattern>/*</url-pattern>
+			<http-method>DELETE</http-method>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Administrator</role-name>
+			<role-name>School</role-name>
+			<role-name>Manager</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/login.jsp</form-login-page>
+			<form-error-page>/error.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
+	
+	<security-role>
+		<description>Admin</description>
+		<role-name>Administrator</role-name>
+	</security-role>
+	<security-role>
+		<description>School</description>
+		<role-name>School</role-name>
+	</security-role>
+	<security-role>
+		<description>Manager</description>
+		<role-name>Manager</role-name>
+	</security-role>
+
 </web-app>
