--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.2.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
