--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,16 +20,41 @@
 		<filter-name>RedirectFilter</filter-name>
 		<filter-class>hu.sol.kvki.book.filter.RedirectFilter</filter-class>
 	</filter>
-	
+
 	<servlet>
 		<servlet-name>spring-web</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/mvc-config.xml</param-value>
-		</init-param>	
+		</init-param>
+	</servlet>
+
+	<servlet>
+		<servlet-name>Vaadin</servlet-name>
+		<servlet-class>com.vaadin.server.VaadinServlet</servlet-class>
+		<init-param>
+			<param-name>UI</param-name>
+			<param-value>hu.sol.kvki.book.vaadin.ui.BookUI</param-value>
+		</init-param>
+		<init-param>
+			<param-name>widgetset</param-name>
+			<param-value>hu.sol.kvki.book.vaadin.ui.BookWidgetset</param-value>
+		</init-param>
 	</servlet>
 	
+	
+	<servlet-mapping>
+		<servlet-name>Vaadin</servlet-name>
+		<url-pattern>/vaadinBook</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>Vaadin</servlet-name>
+		<url-pattern>/VAADIN/*</url-pattern>
+	</servlet-mapping>
+
+
 	<servlet-mapping>
 		<servlet-name>spring-web</servlet-name>
 		<url-pattern>/</url-pattern>
@@ -70,7 +95,7 @@
 			<form-error-page>/error.jsp</form-error-page>
 		</form-login-config>
 	</login-config>
-	
+
 	<security-role>
 		<description>Admin</description>
 		<role-name>Administrator</role-name>
